TITULO DE LA HISTORIA DE LORENA

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hola mundo</title>
 </head>
 <body>
-  <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus natus vitae ipsum, nemo vero explicabo mollitia odit quae consequatur molestias quidem distinctio inventore placeat! Molestiae minima deleniti modi unde illo!</p>
+  <h1>Historia de lorena</h1>
+  <p> lorena, ipsum dolor sit amet consectetur adipisicing elit. Minus natus vitae ipsum, nemo vero explicabo mollitia odit quae consequatur molestias quidem distinctio inventore placeat! Molestiae minima deleniti modi unde illo!</p>
 </body>
 </html>
